[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seyeon_pytorch_extension"
dynamic = ["version"]
authors = [
  { name="Kim Se-yeon", email="tpdussla93@gmail.com" },
]
description = "Pytorch extension package for personal use"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "torch",
  "torchvision",
  "torchaudio",
  "requests"
]

[project.urls]
Homepage = "https://github.com/seyeon923/pytorch_extension"
Issues = "https://github.com/seyeon923/pytorch_extension/issues"

[tool.hatch.version]
path = "src/seyeon/pytorch_extension/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/seyeon"]